Arreglado listado de 1 curso --> n reseñas
