# cursos/src/main/java/com/ipartek/formacion/cursos/dtos/CursoDTO3.java
@@ -1,0 +1,7 @@
+package com.ipartek.formacion.cursos.dtos;
+
+import java.util.List;
+
+public record CursoDTO3(Long codigo, String nombre, String identificador, int nHoras, List<ResenyaDTO> resenya) {
+
+}
